--- a/main.tex
+++ b/main.tex
@@ -58,96 +58,8 @@
 \section{Conclusion and outlook}
 \input{concl.tex}
 
-\begin{thebibliography}{00}
-% BES-III, % http://iopscience.iop.org/article/10.1088/1674-1137/34/2/009/meta
-% CLAS, % https://scholar.google.ru/scholar?cites=6441758058779809394&as_sdt=2005&sciodt=0,5&hl=ru
-% CMS. % http://cds.cern.ch/record/926540
-\bibitem{BESIII} Y. Liang, H. Rang-Lin et. all, Lagrange multiplier method used in BESIII kinematic fitting, Chinese Physics C, \textbf{34, 2} 204 (2010) \\ URL: \texttt{http://stacks.iop.org/1674-1137/34/i=2/a=009}
+% \input{biblio.tex}
+\bibliographystyle{webofc}
+\bibliography{biblio}
 
-\bibitem{CLAS} M.~Williams, D.~Applegate, C.A.~Meyer, Determining Momentum and Energy Corrections for g1c Using Kinematic Fitting, CLAS-NOTE \textbf{04-017} 42 (2004)  \\ URL: \texttt{https://www.jlab.org/Hall-B/notes/clas\_notes04/2004-017.pdf}
-% Carnegie Mellon University June 7, 2004
-
-\bibitem{CMS} J.~D'Hondt et all., Fitting of Event Topologies with External Kinematic Constraints in CMS, CMS-NOTE-2006-023, 19 (2006)
-
-\bibitem{anke} ANKE collaboration official web-page\\ URL: \texttt{http://collaborations.fz-juelich.de/ikp/anke/index.shtml}
-
-\bibitem{b1} J.P.~Berge, F.T.~Solmitz, H.D.~Taft, Rev.\ Sci.\ Instr.\ \textbf{32} 538 (1961).
-\bibitem{b2} R. Bock, Application of a generalized method of least squares for kinematical analysis of tracks in bubble chambers,       Geneva : CERN, 1960. - 11 p. CERN 60-30 (1960).
-\bibitem{b3} G.A. Korn, T.M. Korn, Mathematical handbook for scientists and engineers, McGraw-Hill (1968) 333--335.
-\bibitem{b4} P. Avery, KWFIT package\\ URL: \texttt{http://www.phys.ufl.edu/\textasciitilde{}avery/kwfit/}
-\bibitem{b5} V.I. Moroz, JINR communications R-1958 (1965)\\ URL: \texttt{http://nu73-73.jinr.ru/\textasciitilde{}cyrkov/MorozJINRCommR1958.pdf}
-% \texttt{https://drive.google.com/file/d/1z1hPsccoyXYGA-DT6-7xmeKnYBwPJCS8}
-\bibitem{b6} V.S. Kurbatov, I.N. Silin, Nucl. Instrum. Meth. Phys. Res. A 345 (1994) 346--350
-% \bibitem{b7} S.N. Dymov et al., Nucl. Instrum. Meth. Phys. Res. A 440 (2000) 431--437
-\bibitem{b8} S. Barsov et al., Nucl. Instrum. Meth. Phys. Res. A 462 (2001) 364
-\bibitem{b9} V. Komarov et al., Phys. Rev. C 93 (2016) 065206
-\bibitem{b10} S. Dymov et al., FdModule framework\\ URL: \texttt{http://nu73-73.jinr.ru/\textasciitilde{}dymov/FdModule/index.html}
-
-% \bibitem{anke} ANKE collaboration official web-page\\ URL: \texttt{http://collaborations.fz-juelich.de/ikp/anke/index.shtml}
-
-\bibitem{fum_1st} S.N. Sokolov and I.N. Silin, Preprint JINR, D-810, Dubna(1961)
-
-% % Zainon, R., Butler, A. P. H., Cook, N. J., Butzer, J. S., Schleich, N., de Ruiter, N., Tlustos, L., Clark, M. J., Heinz, R. & Butler, P. H. (2010). Construction and operation of the MARS-CT scanner,
-% % Internetworking Indonesia Journal 2(1): 3–10.
-% \bibitem{mars}
-% R.~Zainon, A.P.H.~Butler \textit{et al.}, Internetworking Indonesia Journal \textbf{2(1)}, 3--10 (2010).
-%
-% \bibitem{dicom}
-% DICOM standard official site, available at http://dicom.nema.org/standard.html.
-%
-% \bibitem{turbel}
-% H.~Turbell, \textit{Cone-beam reconstruction using filtered back-projection}, Link\"oping University Electronic Press, 189 (2001).
-% %
-% % and use \bibitem to create references.
-% \bibitem{trends}
-% I.~Scholl, T.~Aach, T.M.~Deserno \textit{et al.}, Comput.\ Sci.\ Res.\ Dev.\ \textbf{26}, 5--13 (2011).
-%
-% \bibitem{Roobot}
-% C.A.~Roobottom, G.~Mitchell, G.~Morgan-Hughes, Clin.\ Radiol.\ \textbf{65 (11)}, 859--67 (2010).
-%
-% \bibitem{popularCT}
-% T.~Hiroyasu, Y.~Minamitani, M.~Yoshimi, M.~Miki, WORLDCOMP'11 \textbf{2011-MRS-84 (5)} (2011).
-%
-% \bibitem{hierarhCT}
-% S.~Xiao, Y.~Bresler, D.C.~Munson, Proceedings 2003 International Conference on Image Processing \textbf{2}, II–819–22 (2003).
-%
-% \bibitem{77}
-% L.~Feldkamp, L.~Davis, J.~Kress, Journal of the Optical Society of America A \textbf{1(6)}, 612--619 (1984).
-%
-% \bibitem{bigObserve}
-% A.~Belle, BioMed Research International \textbf{2015}, 16 (2015).
-%
-% % \bibitem{Scherl}
-% % H.~Scherl, \textit{Evaluation of State-of-the-Art Hardware Architectures for Fast Cone-Beam CT Reconstruction} (Springer Fachmedien Wiesbaden GmbH, Wiesbaden, 2011) XX, 138
-% %
-% % \bibitem{Yu}
-% % L.~Zhou, J.~Chang, Medical Physics \textbf{39} 4000 (2012)
-% %
-% % \bibitem{Ramani}
-% % S.~Ramani, J.A.~Fessler, IEEE Transactions on Medical Imaging, \textbf{31 (3)}, 677 (2012)
-% %
-% % \bibitem{Yan}
-% % G.~Yan, S.~Zhu, Y.~Dai, C.~Qin, Journal of X-Ray Science and Technology \textbf{16 (626)} 225--234 (2008).
-%
-% \bibitem{76}
-% B.~Meng, G.~Pratx, L.~Xing, Med.\ Phys.\ \textbf{38(12)} 6603--6609 (2011).
-%
-% % \bibitem{77}
-% % C.F.~Mackenzie, P.~Hu, A.~Sen et al., AMIA Annual Symposium Proceedings \textbf{2008} 318--322 (2008)
-%
-% \bibitem{chinese}
-% C.-T.~Yang, C.-T.~Kuo, W.-H.~Hsu, W.-C. Shih, Proceedings of the 7th international conference on Advances in Grid and Pervasive Computing \textbf{7296}, 338--349 (2012).
-%
-% \bibitem{HDFS} HDFS documentation, available at http://hadoop.apache.org/docs/current/hadoop-project-dist/hadoop-hdfs/HdfsDesign.html.
-
-
-%###################################################################################
-% \bibitem{RefJ}
-% Format for Journal Reference
-% Journal Author, Journal \textbf{Volume}, page numbers (year)
-% Format for books
-% \bibitem{RefB}
-% Book Author, \textit{Book title} (Publisher, place, year) page numbers
-% etc
-\end{thebibliography}
 \end{document}
