Add links in Bib.tex format

--- a/biblio.bib
+++ b/biblio.bib
@@ -9,3 +9,95 @@
   year={2010},
   abstract={In this paper, the kinematic fitting with the Lagrange multiplier method has been studied for BESIII experiment. First we introduce the Lagrange multiplier method and implement kinematic constraints. Then we present the performance of the kinematic fitting algorithm. With the kinematic fitting, we can improve the resolution of track parameters and reduce the background.}
 }
+
+@article{CLAS,
+  title={Determining momentum and energy corrections for g1c using kinematic fitting},
+  author={Williams, Mike and Applegate, Doug and Meyer, Curtis A},
+  journal={CLAS NOTE},
+  volume={17},
+  pages={2004},
+  year={2004}
+}
+
+@techreport{CMS,
+      author        = "D'Hondt, Jorgen and Lowette, Steven and Buchmüller, O L
+                       and Cucciarelli, Susanna and Schilling, Frank-Peter and
+                       Spiropulu, Maria and Paktinat-Mehdiabadi, S and Benedetti,
+                       Daniele and Pape, Luc",
+      title         = "{Fitting of Event Topologies with External Kinematic
+                       Constraints in CMS}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "CMS-NOTE-2006-023",
+      month         = "Jan",
+      year          = "2006",
+      reportNumber  = "CMS-NOTE-2006-023",
+      url           = "http://cds.cern.ch/record/926540",
+}
+
+@article{b1,
+  title={Kinematical analysis of interaction vertices from bubble chamber data},
+  author={Berge, J Peter and Solmitz, Frank T and Taft, Horace D},
+  journal={Review of Scientific Instruments},
+  volume={32},
+  number={5},
+  pages={538--548},
+  year={1961},
+  publisher={AIP}
+}
+
+@article{anke,
+  title={ANKE, a new facility for medium energy hadron physics at COSY-J{\"u}lich},
+  author={Barsov, S and Bechstedt, U and Bothe, W and Bongers, N and Borchert, G and Borgs, W and Br{\"a}utigam, W and B{\"u}scher, M and Cassing, W and Chernyshev, V and others},
+  journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume={462},
+  number={3},
+  pages={364--381},
+  year={2001},
+  publisher={Elsevier}
+}
+
+@techreport{b2,
+  title={Application of a generalized method of least squares for kinematical analysis of tracks in bubble chambers},
+  author={Bock, Rudolf K},
+  year={1960},
+  institution={Cern}
+}
+
+@book{b3,
+  title={Mathematical handbook for scientists and engineers: definitions, theorems, and formulas for reference and review},
+  author={Korn, Granino Arthur and Korn, Theresa M},
+  year={2000},
+  publisher={Courier Corporation}
+}
+
+@article{b4,
+  title={Kinematic fitting algorithms and lessons learned from KWFIT},
+  author={Avery, Paul},
+  journal={Comput. Phys. Commun},
+  volume={140},
+  pages={135},
+  year={2001}
+}
+
+@article{b6,
+  title={New method for minimizing regular functions with constraints on parameter region},
+  author={Kurbatov, VS and Silin, IN},
+  journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume={345},
+  number={2},
+  pages={346--350},
+  year={1994},
+  publisher={Elsevier}
+}
+
+@article{b7,
+  title={Evidence for excitation of two resonance states in the isovector two-baryon system with a mass of 2.2 GeV/c 2},
+  author={Komarov, V and Tsirkov, D and Azaryan, T and Bagdasarian, Z and Dymov, S and Gebel, R and Gou, B and Kacharava, A and Khoukaz, A and Kulikov, A and others},
+  journal={Physical Review C},
+  volume={93},
+  number={6},
+  pages={065206},
+  year={2016},
+  publisher={APS}
+}
