Renew the list of the acticles to find for citing

--- a/biblio.tex
+++ b/biblio.tex
@@ -24,6 +24,7 @@
 
 %НАЙТИ И ПРОЦИТИРОВАТЬ В BIBTEX!
 \bibitem{b5} V.I. Moroz, JINR communications R-1958 (1965)\\ URL: \texttt{http://nu73-73.jinr.ru/\textasciitilde{}cyrkov/MorozJINRCommR1958.pdf}
+\bibitem{b6} V.S. Kurbatov, I.N. Silin, Nucl. Instrum. Meth. Phys. Res. A 345 (1994) 346--350
 \bibitem{b10} S. Dymov et al., FdModule framework\\ URL: \texttt{http://nu73-73.jinr.ru/\textasciitilde{}dymov/FdModule/index.html}
 \bibitem{fum_1st} S.N. Sokolov and I.N. Silin, Preprint JINR, D-810, Dubna(1961)
 
