--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,7 @@
 \input{concl.tex}
 
 % \input{biblio.tex}
-\bibliographystyle{webofc}
+% \bibliographystyle{webofc}
 \bibliography{biblio}
 
 \end{document}
