Minor style corrections in title & biblio

--- a/biblio.bib
+++ b/biblio.bib
@@ -21,7 +21,7 @@
 }
 
 @techreport{CMS,
-      author        = "D'Hondt and others",
+      author        = "D'Hondt, Jorgen and others",
       title         = "{Fitting of Event Topologies with External Kinematic
                        Constraints in CMS}",
       institution   = "CERN",
@@ -80,7 +80,7 @@
 
 @article{b6,
   title={New method for minimizing regular functions with constraints on parameter region},
-  author={Kurbatov, VS and Silin, IN},
+  author={Kurbatov, V S and Silin, I N},
   journal={Nucl. Instrum. Methods Phys. Res. A},
   volume={345},
   number={2},
