--- a/title.tex
+++ b/title.tex
@@ -2,14 +2,14 @@
 \title{FUMILI-based minimization with constraints using method of elimination of differentials}
 
 \author{
-  \firstname{Vladimir} \lastname{Kurbatov},~
-  \firstname{Victoria} \lastname{Tokareva}\thanks{
+  \firstname{Vladimir} \lastname{Kurbatov}\inst{1},
+  \firstname{Victoria} \lastname{Tokareva}\inst{1}\fnsep\thanks{
     \email{tokareva@jinr.ru}
-   },~
-  \firstname{Dmitry} \lastname{Tsirkov}
+   },
+  \firstname{Dmitry} \lastname{Tsirkov}\inst{1}
 }
 
-\institute{Laboratory of Nuclear Problems, Joint Institute for Nuclear Research, \\6 Joliot-Curie, Dubna, Moscow region, 141980, Russia}
+\institute{Laboratory of Nuclear Problems, Joint Institute for Nuclear Research, RU-141980 Dubna, Russia}
 
 %TODO: rewrite the abstract a bit different, if possible (the current version has been written for AYSS-18 abstracts and published already)
 
