Grammar and terms

--- a/constrMinIntro.tex
+++ b/constrMinIntro.tex
@@ -4,10 +4,11 @@
 % Подход, предложенный одним из авторов доклада в 90-е (ссылка) [очень крутой - TODO: прописать, почему.]
 
 % Первые идеи по преодолению подобных сложностей в задачах кинематического фита были предложены в 60-е.
-The first ideas on overcoming such complexities in the problems of kinematic fitting were proposed in the sixties.
+The first ideas on overcoming this issue were suggested in several works starting from early sixties.
 % Солмицом и Бёрджем \cite{b1} было предложено применение метода множителей Лагранжа (см. далее), который до сих пор находит широкое применение в задачах подобного типа \cite{b4}. %сюда же можно ещё ссылки на эксперименты, там тоже сплошнй Лагранж
-Solmitz and Berge in~\cite{b1} proposed to use the method of Lagrange multipliers (see below), which is still widely used in problems of this type~\cite{b4}. % here you can refer to more experiments, they are also using solid Lagrange
+Solmitz and Berge proposed to use the method of Lagrange multipliers~\cite{b1}, which is still widely used in problems of this type~\cite{b4}. % here you can refer to more experiments, they are also using solid Lagrange
 % Примерно в то же время специалистами ОИЯИ было предложено применение минимизации с тяжёлым членом \cite{b5} (будет описано далее) и разработан пакет для минимизации $\chi^2$-функционалов FUMILI~\cite{fum_1st}.
-Approximately at the same time JINR specialists proposed the use of minimization with the penalty function~\cite{b5}, described below, and developed a package for minimizing the $\chi^2$-like functionals FUMILI~\cite{fum_1st}.
+Approximately at the same time the penalty method for minimization was proposed at JINR by Moroz~\cite{b5}.
+% and a package for minimizing the $\chi^2$-like functionals FUMILI~\cite{fum_1st} was developed by Silin and Kurbatov.
 % Позже, одним из соавторов данной работы, было предложено \cite{b6} использование метода устранения производных для кинфита со связями.
 Later, one of the co-authors of this work suggested the method of elimination of differentials for kinematic fitting with constraints~\cite{b6}.
