Added citation for Fumili

--- a/biblio.bib
+++ b/biblio.bib
@@ -118,3 +118,7 @@
   number       = {D\symbol{45}810},
   address      = {Dubna},
 }
+
+@misc{fum_prog,
+  howpublished={CERN Program Library, D510, FUMILI},
+}
