Moved last fig.

--- a/toyExpl.tex
+++ b/toyExpl.tex
@@ -38,4 +38,4 @@ $x_4$ & $0.1$ & $0.111 \pm 0.033$ & $0.114 \pm 0.023$ \\\hline\hline
 
 The results of the fit are presented in
 % fig.~\ref{toy_errs} and
-table~\ref{tab:1}. They show that constraints could lead to significant improvement in fit precision, that is particularly pronounced in the present case for the parameters 2 and 3.
+table~\ref{tab:1}. They show that constraints could lead to significant improvement in fit precision, that is particularly pronounced in the present case for the parameters $x_2$ and $x_3$.
