--- a/ANKEkinfit.tex
+++ b/ANKEkinfit.tex
@@ -7,7 +7,7 @@ The developed Fumili extension was used by the authors to perform the kinematic 
 \begin{figure}[htbp]\centering
 \includegraphics[width=0.8\textwidth]{pics/setup_bw.eps}
 \caption{
-A scheme of the $pp \to pp$ reaction being registered in the ANKE forward detector. Other ANKE detectors are not shown.
+Scheme of the $pp \to pp$ reaction being registered in the ANKE forward detector. Other ANKE detectors are not shown.
 }
 \label{anke_scheme}
 \end{figure}
