--- a/toyExpl.tex
+++ b/toyExpl.tex
@@ -24,7 +24,7 @@ x_1^2 + x_1x_4 - x_4^2 = 0.29,~x_2^2/x_3 = 0.1125.
 
 \begin{table}[htbp]
 \caption{
-The parameter values obtained by fitting the set of events generated according to equation \eqref{eq:simul}, with their errors.
+Parameter values obtained by fitting the set of events generated according to equation \eqref{eq:simul}, with their errors.
 }
 \label{tab:1}
 \begin{tabular*}{1\textwidth}{@{\hspace{2em}}c@{\extracolsep{\fill}}ccc@{\hspace{2em}}}\hline\hline
