--- a/ANKEkinfit.tex
+++ b/ANKEkinfit.tex
@@ -69,6 +69,6 @@ For the study under consideration, the reconstructed coordinates $\hat{c}_k$ are
 
 In order to check the improvement of the momentum precision, about 700\,000 $pp \to pp$ events were simulated and then reconstructed either with or without kinematic constraint \eqref{cons_miss}.
 The reconstruction precision for momenta in polar coordinates in center of mass system is shown in fig.~\ref{anke_errs}.
-Since $pp \to pp$ is a binary reaction, the condition \eqref{cons_miss} fixes the absolute value of the momentum $|\boldsymbol{p}_p^\mathrm{cm}|$ to the delta function.
+Since $pp \to pp$ is a binary reaction, condition \eqref{cons_miss} fixes the absolute value of the momentum $|\boldsymbol{p}_p^\mathrm{cm}|$ to the delta function.
 Kinematic fitting improves the precision of the polar angle $\theta_p^\mathrm{cm}$ nearly twice.
 For the azimuthal angle $\phi_p^\mathrm{cm}$ the improvement not so significant and can be noticed only at the edges of the acceptance.
