--- a/title.tex
+++ b/title.tex
@@ -14,10 +14,17 @@
 %TODO: rewrite the abstract a bit different, if possible (the current version has been written for AYSS-18 abstracts and published already)
 
 \abstract{
-Some minimization problems, in addition to usual constant limits for single parameters, could imply constraints, i.e. additional relations between parameters $p_1, \ldots, p_n$ in form of equations $\phi(p_1, \dots, p_n) = 0$.
-Often these equations are non-linear and complicated, and thus it is impossible or impractical to eliminate redundant parameters directly. A notable example of such problem is kinematic fitting.
-A minimization approach called a method of elimination of differentials is being developed at JINR as an extension to the FUMILI minimizer. It is being used to perform kinematic fitting while analyzing data collected at the ANKE spectrometer.
-The talk will cover the mathematical principles of the method, its software implementation and API, and present some examples of its usage.
+% Some minimization problems, in addition to usual constant limits for single parameters, could imply constraints, i.e. additional relations between parameters $p_1, \ldots, p_n$ in form of equations $\phi(p_1, \dots, p_n) = 0$.
+% Often these equations are non-linear and complicated, and thus it is impossible or impractical to eliminate redundant parameters directly. A notable example of such problem is kinematic fitting.
+% A minimization approach called a method of elimination of differentials is being developed at JINR as an extension to the FUMILI minimizer. It is being used to perform kinematic fitting while analyzing data collected at the ANKE spectrometer.
+% The talk will cover the mathematical principles of the method, its software implementation and API, and present some examples of its usage.
+Kinematic fitting is one of the popular particle physics problems, where constant minimization is used. 
+The conctraints, setting additional relations between parameters $\boldsymbol{p}$ can be given in form of equations $\phi(p_1, \dots, p_n) = 0$.
+Often these equations are non-linear and complicated, and thus it is impossible or impractical to eliminate redundant parameters directly.
+The artile covers employing of the minimization approach called a method of elimination of differentials, that is being developed at JINR as an extension to the FUMILI 
+minimizer, and is intended for kinematic fitting in particle physics experiments.
+% Th
+
 }
 %
 \maketitle
