--- a/01_kin_fit.tex
+++ b/01_kin_fit.tex
@@ -54,5 +54,5 @@ BES-III~\cite{BESIII}, % http://iopscience.iop.org/article/10.1088/1674-1137/34/
 CLAS~\cite{CLAS}, % https://scholar.google.ru/scholar?cites=6441758058779809394&as_sdt=2005&sciodt=0,5&hl=ru
 CMS~\cite{CMS}. % http://cds.cern.ch/record/926540
 
-In this paper we are going to cover a Fumili-based framework for kinematic fitting we have developed, which is currently used for data analysis in the ANKE experiment (Jülich, Germany)~\cite{anke}.
-% В данной статье мы собираемся рассказать об опыте разработки Fumili-based фреймвока для кинематического фита, в настоящий момент применяемого авторами для кинематического фита в эксперименте ANKE (Jülich, Germany)~\cite{anke}.
+In this paper we are going to cover a FUMILI-based framework for kinematic fitting we have developed, which is currently used for data analysis in the ANKE experiment (Jülich, Germany)~\cite{anke}.
+% В данной статье мы собираемся рассказать об опыте разработки FUMILI-based фреймвока для кинематического фита, в настоящий момент применяемого авторами для кинематического фита в эксперименте ANKE (Jülich, Germany)~\cite{anke}.
