--- a/ANKEkinfit.tex
+++ b/ANKEkinfit.tex
@@ -1,8 +1,7 @@
 % Kinematic fitting at ANKE
 % Разработанное расширение было использовано авторами для кинематического фита в реакциях $pp \to pp$ и $pp \to pp\pi^0$ на данных, полученных на спектрометре ANKE (Jülich, Germany)~\cite{anke}.
-The developed Fumili extension was used by the authors to perform the kinematic fitting of the data obtained at the ANKE spectrometer (Jülich, Germany)~\cite{anke} for the $pp \to pp$ and $pp \to pp\pi^0$ reactions.
 
-% На рисунке \eqref{anke_scheme} можно видеть, что в процессе прохождения протонного пучка через установку часть протонов может отклоняться от направления основного пучка и не фиксироваться установкой, таким образом при анализе данных эксперимента мы можем столкнуться с разницей зафиксированных энергий и количества вещества, вступившего в реакцию с данными, полученными на выходе. Восстановить долю таких ``потерянных'' протонов мы можем, используя инвариант Лоренца $\left|\boldsymbol{P}^{(4)}_\mathrm{beam}+\boldsymbol{P}^{(4)}_\mathrm{targ}-\boldsymbol{P}^{(4)}_p\right|^2 = m_p^2$.
+The developed Fumili extension was used by the authors to perform the kinematic fitting of the data obtained at the ANKE spectrometer (Jülich, Germany)~\cite{anke} for the $pp \to pp$ and $pp \to pp\pi^0$ reactions.
 
 \begin{figure}[htbp]\centering
 \includegraphics[width=0.8\textwidth]{pics/setup_bw.eps}
@@ -12,7 +11,9 @@ Scheme of the $pp \to pp$ reaction being registered in the ANKE forward detector
 \label{anke_scheme}
 \end{figure}
 
-\begin{figure}[htbp]\centering
+% На рисунке \eqref{anke_scheme} можно видеть, что в процессе прохождения протонного пучка через установку часть протонов может отклоняться от направления основного пучка и не фиксироваться установкой, таким образом при анализе данных эксперимента мы можем столкнуться с разницей зафиксированных энергий и количества вещества, вступившего в реакцию с данными, полученными на выходе. Восстановить долю таких ``потерянных'' протонов мы можем, используя инвариант Лоренца $\left|\boldsymbol{P}^{(4)}_\mathrm{beam}+\boldsymbol{P}^{(4)}_\mathrm{targ}-\boldsymbol{P}^{(4)}_p\right|^2 = m_p^2$.
+
+\begin{figure}[hbp]\centering
 \includegraphics[height=0.3\textheight]{pics/drawMom.eps}
 \includegraphics[height=0.3\textheight]{pics/drawTh.eps}
 \includegraphics[height=0.3\textheight]{pics/drawPhi.eps}
