--- a/main.tex
+++ b/main.tex
@@ -45,8 +45,8 @@
 %   \input{penalty.tex}
   \subsection{Method of elimination of differentials}
   \input{elDiff.tex}
-\section{Fumili-based realization of the method}
-% \textcolor{red}{Some words about Fumili and its advantages.}
+\section{FUMILI-based realization of the method}
+% \textcolor{red}{Some words about FUMILI and its advantages.}
 % \input{fumili.tex}
 % \textcolor{red}{What do we need to write about implementation?}
 %   программная реализация будет здесь же
